# FastAPI-do-Zero-2025

./: README.md  pyproject.toml
fastapi_zero/: app.py  models.py  schemas.py
tests/: conftest.py  test_app.py
